fix bug user profile set overflow-x to auto instead of overflow

--- a/resources/assets/sass/_navTabs.scss
+++ b/resources/assets/sass/_navTabs.scss
@@ -3,7 +3,7 @@
     padding: 10px 50px;
     gap: 50px;
     justify-content: center;
-    overflow: auto;
+    overflow-x: auto;
 }
 
 @media (max-width: 768px) {
